--- a/app/render.yaml
+++ b/app/render.yaml
@@ -1,9 +1,11 @@
 services:
   - type: web
-    name: fastapi-viet-hero
+    name: resnet-api
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    plan: free
+    runtime:
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10.0
+        value: 3.10
